// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`get sanity check rules sanity check rule list when destructive changes flag is present and ff enabled 1`] = `[]`;

exports[`get sanity check rules sanity check rule list when destructive changes flag is present and ff enabled 2`] = `
[
  "cantHaveMoreThan500ResourcesRule",
]
`;

exports[`get sanity check rules sanity check rule list when destructive changes flag is present but ff not enabled 1`] = `
[
  "cantEditKeySchemaRule",
  "cantAddLSILaterRule",
  "cantRemoveLSILater",
  "cantEditLSIKeySchemaRule",
  "cantEditGSIKeySchemaRule",
  "cantAddAndRemoveGSIAtSameTimeRule",
]
`;

exports[`get sanity check rules sanity check rule list when destructive changes flag is present but ff not enabled 2`] = `
[
  "cantHaveMoreThan500ResourcesRule",
  "cantMutateMultipleGSIAtUpdateTimeRule",
]
`;

exports[`get sanity check rules sanitycheck rule list when api is in update status and ff enabled 1`] = `
[
  "cantEditKeySchemaRule",
  "cantAddLSILaterRule",
  "cantRemoveLSILater",
  "cantEditLSIKeySchemaRule",
  "cantRemoveTableAfterCreation",
]
`;

exports[`get sanity check rules sanitycheck rule list when api is in update status and ff enabled 2`] = `
[
  "cantHaveMoreThan500ResourcesRule",
]
`;

exports[`get sanity check rules sanitycheck rule list when api is in update status and no ff enabled 1`] = `
[
  "cantEditKeySchemaRule",
  "cantAddLSILaterRule",
  "cantRemoveLSILater",
  "cantEditLSIKeySchemaRule",
  "cantEditGSIKeySchemaRule",
  "cantAddAndRemoveGSIAtSameTimeRule",
  "cantRemoveTableAfterCreation",
]
`;

exports[`get sanity check rules sanitycheck rule list when api is in update status and no ff enabled 2`] = `
[
  "cantHaveMoreThan500ResourcesRule",
  "cantMutateMultipleGSIAtUpdateTimeRule",
]
`;
